@@ -1,25 +1,6 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2016  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)OptionValueParser.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)OptionValueParser.java	3.3.0	2016/05/06
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
@@ -52,7 +33,7 @@ import ssac.util.excel2csv.poi.EtcPoiUtil;
 /**
  * 変換定義におけるオプション値のパーサー。
  * 
- * @version 3.3.0
+ * @version 4.0.0
  * @since 3.3.0
  */
 public class OptionValueParser
@@ -333,7 +314,8 @@ public class OptionValueParser
 		if (input == null)
 			throw new NullPointerException();
 		try {
-			return new Integer(input);
+			//return new Integer(input);
+			return Integer.valueOf(input);
 		} catch (NumberFormatException ex) {
 			return null;
 		}
