@@ -1,25 +1,6 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2010  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)PropertiesUtil.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)PropertiesUtil.java	1.17	2010/11/19
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
@@ -182,7 +163,8 @@ public class PropertiesUtil
 	 */
 	static public Boolean getBoolean(Properties prop, String key, Boolean defaultValue) {
 		String strValue = prop.getProperty(key);
-		Boolean retval = (strValue != null ? new Boolean(strValue) : null);
+		//Boolean retval = (strValue != null ? new Boolean(strValue) : null);
+		Boolean retval = (strValue != null ? Boolean.valueOf(strValue) : null);
 		return (retval != null ? retval : defaultValue);
 	}
 	
