@@ -1,25 +1,6 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2009  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)AutoscrollDropTargetListener.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)AutoscrollDropTargetListener.java	1.14	2009/12/09
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
@@ -47,7 +28,7 @@ import javax.swing.TransferHandler;
  * コンポーネントの自動スクロールを制御する <code>DropTargetListener</code> クラス。
  * このクラスは、<code>javax.swing.plaf.basic.BasicDropTargetListener</code> を参考にしている。
  * 
- * @version 1.14	2009/12/09
+ * @version 4.0.0
  * @since 1.14
  */
 public class AutoscrollDropTargetListener
@@ -255,8 +236,10 @@ implements DropTargetListener, ActionListener
 	private void initPropertiesIfNecessary() {
 		if (_timer == null) {
 			Toolkit t = Toolkit.getDefaultToolkit();
-			Integer initial  = new Integer(100);
-			Integer interval = new Integer(100);
+			//Integer initial  = new Integer(100);
+			//Integer interval = new Integer(100);
+			Integer initial  = Integer.valueOf(100);
+			Integer interval = Integer.valueOf(100);
 			
 			try {
 				initial = (Integer)t.getDesktopProperty("DnD.Autoscroll.initialDelay");
