@@ -1,25 +1,6 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2009  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)DefaultTreeDropTargetListener.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)DefaultTreeDropTargetListener.java	1.14	2009/12/09
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
@@ -50,7 +31,7 @@ import javax.swing.tree.TreePath;
  * ツリーコンポーネントの標準的な <code>DropTargetListener</code> の実装。
  * この実装では、自動スクロール、ならびに、枝ノードの展開機能を実装する。
  *
- * @since 1.14	2009/12/09
+ * @since 4.0.0
  */
 public class DefaultTreeDropTargetListener
 implements DropTargetListener, ActionListener
@@ -362,8 +343,10 @@ implements DropTargetListener, ActionListener
 	private void initPropertiesIfNecessary() {
 		if (_timer == null) {
 			Toolkit t = Toolkit.getDefaultToolkit();
-			Integer initial  = new Integer(100);
-			Integer interval = new Integer(100);
+			//Integer initial  = new Integer(100);
+			//Integer interval = new Integer(100);
+			Integer initial  = Integer.valueOf(100);
+			Integer interval = Integer.valueOf(100);
 			
 			try {
 				initial = (Integer)t.getDesktopProperty("DnD.Autoscroll.initialDelay");
