@@ -1,31 +1,13 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2015  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)SchemaXmlUtil.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)SchemaXmlUtil.java	3.2.0	2015/06/29
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
 package ssac.aadl.fs.module.schema.io;
 
 import java.io.PrintStream;
+import java.lang.reflect.InvocationTargetException;
 
 import javax.xml.stream.XMLStreamConstants;
 import javax.xml.stream.XMLStreamException;
@@ -36,7 +18,7 @@ import ssac.aadl.fs.module.schema.SchemaObject;
 /**
  * XML ユーティリティ。
  * 
- * @version 3.2.0
+ * @version 4.0.0
  * @since 3.2.0
  */
 public class SchemaXmlUtil
@@ -87,12 +69,19 @@ public class SchemaXmlUtil
 		
 		// create SchemaObject instance
 		try {
-			Object obj = clazz.newInstance();
+			//Object obj = clazz.newInstance();
+			Object obj = clazz.getDeclaredConstructor().newInstance();
 			return (T)obj;
+		} catch (NoSuchMethodException ex) {
+			String msg = String.format("<%s> : \"%s\" class cannot instantiation.", parentTag, tagName);
+			throw new XMLStreamException(msg, xmlReader.getLocation(), ex);
 		} catch (InstantiationException ex) {
 			String msg = String.format("<%s> : \"%s\" class cannot instantiation.", parentTag, tagName);
 			throw new XMLStreamException(msg, xmlReader.getLocation(), ex);
 		} catch (IllegalAccessException ex) {
+			String msg = String.format("<%s> : \"%s\" class cannot instantiation.", parentTag, tagName);
+			throw new XMLStreamException(msg, xmlReader.getLocation(), ex);
+		} catch (InvocationTargetException ex) {
 			String msg = String.format("<%s> : \"%s\" class cannot instantiation.", parentTag, tagName);
 			throw new XMLStreamException(msg, xmlReader.getLocation(), ex);
 		} catch (ClassCastException ex) {
