@@ -1,25 +1,6 @@
 /*
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
- *  Copyright 2007-2013  SSAC(Systems of Social Accounting Consortium)
- *  <author> Yasunari Ishizuka (PieCake,Inc.)
- *  <author> Hiroshi Deguchi (TOKYO INSTITUTE OF TECHNOLOGY)
- *  <author> Yuji Onuki (Statistics Bureau)
- *  <author> Shungo Sakaki (Tokyo University of Technology)
- *  <author> Akira Sasaki (HOSEI UNIVERSITY)
- *  <author> Hideki Tanuma (TOKYO INSTITUTE OF TECHNOLOGY)
- */
-/*
+ * @(#)ChartDataRangeEditDialog.java	4.0.0	2021/08/23 : for Java11
+ *     - modified by Y.Ishizuka(PieCake.inc,)
  * @(#)ChartDataRangeEditDialog.java	2.1.0	2013/08/14
  *     - created by Y.Ishizuka(PieCake.inc,)
  */
@@ -54,7 +35,7 @@ import ssac.util.swing.JMaskedNumberSpinner;
 /**
  * チャートのデータレコード範囲を編集するダイアログ。
  * 
- * @version 2.1.0	2013/08/14
+ * @version 4.0.0
  * @since 2.1.0
  */
 public class ChartDataRangeEditDialog extends AbBasicDialog
@@ -121,9 +102,12 @@ public class ChartDataRangeEditDialog extends AbBasicDialog
 		// データを反映
 		_lblTotalRecordCount.setText(String.valueOf(_totalRecordCount));
 		_lblDataRecordCount.setText(String.valueOf(_dataRecordCount));
-		_spnHeaderRecordCount.setValue(new Long(_headerRecordCount));
-		_spnFirstDataRecordNumber.setValue(new Long(_firstRecordIndex+1L));
-		_spnLastDataRecordNumber.setValue(new Long(_lastRecordIndex));
+		//_spnHeaderRecordCount.setValue(new Long(_headerRecordCount));
+		//_spnFirstDataRecordNumber.setValue(new Long(_firstRecordIndex+1L));
+		//_spnLastDataRecordNumber.setValue(new Long(_lastRecordIndex));
+		_spnHeaderRecordCount.setValue(Long.valueOf(_headerRecordCount));
+		_spnFirstDataRecordNumber.setValue(Long.valueOf(_firstRecordIndex+1L));
+		_spnLastDataRecordNumber.setValue(Long.valueOf(_lastRecordIndex));
 		
 		// setup actions
 		ChangeListener cl = new ChangeListener() {
